--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
-Loyola 2nd Annual Data Competition - Shipper Data Set (Trailing 2-Years).xlsx
 ~$e March 23rd - Full set of Questions.docx
 Loyola 2nd Annual Data Competition - Shipper Data Set (Trailing 2-Years).xlsx
+*.DS_Store
+~$Loyola 2nd Annual Data Competition - Shipper Data Set (Trailing 2-Years).xlsx
