Updated code for finding future lanes

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Loyola 2nd Annual Data Competition - Shipper Data Set (Trailing 2-Years).xlsx
 *.DS_Store
 ~$Loyola 2nd Annual Data Competition - Shipper Data Set (Trailing 2-Years).xlsx
+*.ipynb_checkpoints
