--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 ~$e March 23rd - Full set of Questions.docx
 *.DS_Store
-~$Loyola 2nd Annual Data Competition - Shipper Data Set (Trailing 2-Years).xlsx
 *.ipynb_checkpoints
+~$FreightWaves External Data.xlsx
+~$Loyola 2nd Annual Data Competition - Shipper Data Set (Trailing 2-Years).xlsx
